plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'program'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

sourceCompatibility = '16'
targetCompatibility = '16'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'program.telephone'
  mainClass = 'program.telephone.Main'
}

javafx {
  version = '17.0.6'
  modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
}

dependencies {
  implementation 'org.openjfx:javafx-controls:17.0.2'
  implementation 'org.openjfx:javafx-fxml:17.0.2'
  implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
  implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
  
}

test {
useJUnitPlatform()}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}
sourceSets {
  main {
    resources {
      srcDirs = ['src/main/resources']
    }
  }
}
jar {
  manifest {
    attributes 'Main-Class': 'program.telephone.Launcher'
  }
  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
run {
  jvmArgs = [
          '--module-path', 'C:/javafx-sdk-17.0.14/lib',
          '--module-path', classpath.asPath,
          '--add-modules', 'javafx.controls,javafx.fxml,javafx.media',
          '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
  ]
}
tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
  options.compilerArgs += ['--module-path', classpath.asPath]
}